<resources>
    <string name="app_name">League Assistant App</string>
    <string name="auth_failed">Authentication Failed; Please try again.</string>
    <string name="auth_success">Authenticated; Welcome.</string>
    <string name="login_button">Login</string>
    <string name="new_user_button">Create Account</string>
    <string name="anon_login_button">Guest Login</string>
    <string name="new_account_failure">Error making new Account…Please try again.</string>
    <string name="async_task">Network is working…</string>
    <string name="error_summ_name">Please Enter a Valid summoner name</string>
    <string name="cant_find_name">Can\'t find that Summoner on Riot\'s server…</string>
    <string name="finish">Finish</string>
    <string name="lbl_set">Set Your Summoner Successfully</string>
    <string name="lbl_set_fail">You must set your Summoner to use features.</string>
    <string name="already_set">Your Summoner is already set! Try something else.</string>
    <string name="welcome_back">Welcome %1$s</string>
    <string name="kdaFormat">K/D/A %1$s</string>
    <string name="enter_summoner">Enter Summoner Name</string>
    <string name="availability">Are you available to play?</string>
    <string name="cant_play">Can\'t play right now</string>
    <string name="lets_play">Let\'s Play!</string>
    <string name="net_start">Fetching Data&#8230;</string>
    <string name="net_complete">Success</string>
    <string name="net_error">Error Fetching Data from Internet</string>
    <string name="refresh_interval">Please wait before refreshing&#8230;</string>
    <string name="refresh_avail">Refresh</string>
    <string name="connection">connection</string>
    <string name="logout">Logout</string>
    <string name="ui_refresh">updated info</string>
    <string name="other_players">Other Players</string>
    <string name="level_lbl">Level %1$s</string>
    <string name="all">All</string>
    <string name="online">Online Only</string>
    <string name="match_map">Map: %1$s</string>
    <string name="match_time">Game Time: %1$s</string>
    <string name="summoner_icon">summoner icon</string>
    <string name="display_champions">Champions</string>
    <string name="txtChampHint">Enter in a champion</string>
    <string name="btnSearch">Search</string>
    <string name="fetching">getting data...</string>
    <string name="lblMatchDetailsTitle">Details</string>
    <string name="txtRedTeam">Red Team</string>
    <string name="txtBlueTeam">Blue Team</string>
    <string name="lore_lbl">Lore</string>
    <string name="tips_for">Tips for Playing %1$s</string>
    <string name="tips_against">Tips for Playing Against %1$s</string>
    <string name="txtKDA">KDA</string>
    <string name="blue_team">Blue Team</string>
    <string name="red_team">Red Team</string>
</resources>
