<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/refresh_ui"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:orderInCategory="100"
        android:title="@string/refresh_avail"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/check_conn"
        android:icon="@drawable/ic_network_check_black_24dp"
        android:title="@string/connection"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/logout_option"
        android:title="@string/logout"
        android:icon="@drawable/ic_close_black_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/other_players"
        android:title="@string/other_players"
        android:icon="@drawable/ic_people_black_24dp"
        app:showAsAction="ifRoom"/>

</menu>