<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="uoit.csci4100u.mobileapp.Main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:columnOrderPreserved="false"
            android:rowCount="2">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_column="0"
                android:layout_gravity="left|top"
                android:contentDescription="@string/summoner_icon"
                android:padding="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/welcome_lbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintLeft_toRightOf="@+id/imageView"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/summoner_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginTop="24sp"
                android:layout_row="0"/>

            <TextView
                android:id="@+id/avail_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginLeft="24dp"
                android:layout_row="0"
                android:text="@string/availability"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <ToggleButton
                android:id="@+id/avail_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30sp"
                android:layout_row="0"
                android:buttonTint="@color/colorAccent"
                android:checked="false"
                android:textOff="@string/cant_play"
                android:textOn="@string/lets_play"
                app:layout_constraintBaseline_toBaselineOf="@+id/avail_label"
                app:layout_constraintLeft_toRightOf="@+id/avail_label"/>
        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/summoner_info">

            <ListView
                android:id="@+id/matches"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:scrollbarSize="3dp"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbars="vertical"
                android:scrollingCache="true"
                android:smoothScrollbar="true"/>
        </LinearLayout>

    </LinearLayout>

</android.widget.RelativeLayout>