<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/lblMatchDetailsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/lblMatchDetailsTitle"
        android:textSize="26sp"
        tools:layout_editor_absoluteX="342dp" />

    <TextView
        android:id="@+id/match_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblMatchDetailsTitle"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/match_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/match_map"
        android:gravity="center"
        android:padding="8dp"
        android:text="DELETE"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/match_length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/winner"
        android:gravity="center"
        android:padding="8dp"
        android:text="DELETE"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/winner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teams_linear"
        android:gravity="center"
        android:padding="8dp"
        android:text="DELETE"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/teams_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/match_time"
        android:orientation="horizontal"
        android:layout_alignParentEnd="true"
                android:cropToPadding="false"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/team_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/icon1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/icon2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/icon3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/icon4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/icon5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <ListView
            android:id="@+id/lvBlueTeam"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ListView
            android:id="@+id/lvRedTeam"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/team_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/icon6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/icon7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/icon8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/icon9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/icon10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/txtBlueTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/match_time"
        android:layout_alignParentStart="true"
        android:layout_marginStart="26dp"
        android:text="@string/blue_team" />

    <TextView
        android:id="@+id/txtRedTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/match_time"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="28dp"
        android:text="@string/red_team" />


</android.widget.RelativeLayout>